force-app/main/default/objects/SEPAMandate__c/SEPAMandate__c.object-meta.xml
<CustomObject>
    <label>SEPA Mandate</label>
    <nameField>
        <label>SEPA Mandate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEPA Mandate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>