force-app/main/default/objects/SEPAMandate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SEPA Mandate (Account)</relationshipLabel>
    <relationshipName>SEPA_Mandate</relationshipName>
    <type>Lookup</type>
</CustomField>