force-app/main/default/objects/SEPAMandate__c/fields/CreditorID__c.field-meta.xml
<CustomField>
    <fullName>CreditorID__c</fullName>
    <label>Creditor ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>