force-app/main/default/objects/SEPAMandate__c/fields/FirstUseDate__c.field-meta.xml
<CustomField>
    <fullName>FirstUseDate__c</fullName>
    <label>First Use Date</label>
    <type>Date</type>
</CustomField>