force-app/main/default/objects/SEPAMandate__c/fields/LastUseDate__c.field-meta.xml
<CustomField>
    <fullName>LastUseDate__c</fullName>
    <label>Last Use Date</label>
    <type>Date</type>
</CustomField>