force-app/main/default/objects/SEPAMandate__c/fields/LockEndDate__c.field-meta.xml
<CustomField>
    <fullName>LockEndDate__c</fullName>
    <label>Lock End Date</label>
    <type>DateTime</type>
</CustomField>