force-app/main/default/objects/SEPAMandate__c/fields/LockStartDate__c.field-meta.xml
<CustomField>
    <fullName>LockStartDate__c</fullName>
    <label>Lock Start Date</label>
    <type>DateTime</type>
</CustomField>