force-app/main/default/objects/SEPAMandate__c/fields/SenderBankSWIFTCode__c.field-meta.xml
<CustomField>
    <fullName>SenderBankSWIFTCode__c</fullName>
    <label>Sender Bank SWIFT Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>