force-app/main/default/objects/SEPAMandate__c/fields/SenderIBAN__c.field-meta.xml
<CustomField>
    <fullName>SenderIBAN__c</fullName>
    <label>Sender IBAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>