force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandate__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandate__c</fullName>
    <label>SEPA Mandate</label>
    <length>35</length>
    <type>Text</type>
</CustomField>