force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandateIsLocked__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandateIsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SEPA Mandate Is Locked</label>
    <type>Checkbox</type>
</CustomField>