force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandateRecipient__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandateRecipient__c</fullName>
    <description>The recipient&apos;s company code is specified</description>
    <label>SEPA Mandate Recipient</label>
    <length>35</length>
    <type>Text</type>
</CustomField>