force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandateSender__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandateSender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SEPA Mandate Sender</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SEPA Mandate</relationshipLabel>
    <relationshipName>SEPAMandate</relationshipName>
    <type>Lookup</type>
</CustomField>