force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandateStatus__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandateStatus__c</fullName>
    <label>SEPA Mandate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Captured</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>To Be Confirmed</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Locked</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Obsolete</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>