force-app/main/default/objects/SEPAMandate__c/fields/SEPAMandateUUID__c.field-meta.xml
<CustomField>
    <fullName>SEPAMandateUUID__c</fullName>
    <externalId>true</externalId>
    <label>SEPA Mandate UUID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>