force-app/main/default/objects/SEPAMandate__c/fields/SEPAPaymentType__c.field-meta.xml
<CustomField>
    <fullName>SEPAPaymentType__c</fullName>
    <label>SEPA Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Recurrent Mandate</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>One-Off Mandate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>