force-app/main/default/objects/SEPAMandate__c/fields/SignatureCity__c.field-meta.xml
<CustomField>
    <fullName>SignatureCity__c</fullName>
    <label>Signature City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>