force-app/main/default/objects/SEPAMandate__c/fields/SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>SignatureDate__c</fullName>
    <label>Signature Date</label>
    <type>DateTime</type>
</CustomField>