force-app/main/default/objects/SEPAMandate__c/fields/ValidityEndDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityEndDate__c</fullName>
    <label>Validity End Date</label>
    <type>DateTime</type>
</CustomField>