force-app/main/default/objects/SEPAMandate__c/fields/ValidityStartDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityStartDate__c</fullName>
    <label>Validity Start Date</label>
    <type>DateTime</type>
</CustomField>